# vcpkg_template

./: .gitignore  CMakeLists.txt  CMakePresets copy.json  CMakePresets.json  README.md  build-microear.sh  build.sh  bundle-microear.sh  clean-build-microear.sh  install_deps.sh  run.sh  statemachine.scxml  vcpkg copy.json  vcpkg.json  version.h.in  读我-待合并.md
community/: install_vcpkg.sh  install_vcpkg.txt  microear-arm64-linux-dynamic.cmake  microear-arm64-linux-static.cmake  microear-x64-linux-static.cmake
qt6 stateMachine 不良案例/: sqlite3statemanager.cc
src/: dboperatethread.cc  dboperatethread.h  main.cc  main.cpp  main.h  operationrequest.h  sqlite3handler.cc  sqlite3handler.h  sqlite3statemachine.cc  sqlite3statemachine.h  sqlite3statemanager.h
statemachine/: sqlite3_init_statemachine.scxml  statemachine.scxml
